config/argocd-ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/argocd`)
      kind: Rule
      middlewares:
        - name: argocd-strip-prefix
      services:
        - name: argocd-server
          port: 80
          scheme: http
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-strip-prefix
  namespace: argocd
spec:
  stripPrefix:
    prefixes:
      - /argocd
